# jaist-main-thema

./: PBS.sh  README.md  WSmodel.ipynb  anarize.ipynb  izhikevich_sample.ipynb  pyproject.toml  reproduce_gachi.ipynb  reproduce_gachi.py  reproduce_gachi_less_synapse.ipynb  reproduce_gachi_less_synapse.py  reproduce_gachi_less_synapse_no_standalone.py
